k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hqs-user-service
spec:
    replicas: 1
    selector:
      matchLabels:
        app: hqs-user-service
    template:
        metadata:
          name: hqs-user-service
          labels:
            app: hqs-user-service
        spec:
          containers:
            - name: hqs-user-service
              image: gcr.io/softcorp-hqs/hqs-user-service:v0.0.46
              imagePullPolicy: Always
              volumeMounts: 
              - name: image-storage
                mountPath: ./app/tmp
              ports:
                - containerPort: 9000
          volumes:
          - name: image-storage
            emptyDir: {}
