k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hqs-email-service
spec:
  selector:
    app: hqs-email-service
  type: LoadBalancer
  loadBalancerSourceRanges:
  - 130.226.157.37/32 # Home
  - 93.160.3.177/32 # Cph
  - 5.186.74.127/32 # Dad
  ports:
    - protocol: TCP
      port: 9000
